@@ -1,3 +1,11 @@
+2010-05-09
+ Added inline syntax of subcmd+, to handle adding subcmds.
+
+2010-05-09
+ Handle -- better in some cases.
+ Include msgcat, namespace which, and 8.6 catch in syntaxbuild.
+ Experiment to test TDBC
+
 2009-12-21
  Note when a newline breaks a command substitution
 
